# thicket

./: .gitignore  LICENSE  LICENSE-EXT  README.md  RELNOTES.md
client/: AllSetsUpdateChannel.h  AllSetsUpdateDialog.cpp  AllSetsUpdateDialog.h  AllSetsUpdater.cpp  AllSetsUpdater.h  BasicLandCardDataMap.h  BasicLandControlWidget.cpp  BasicLandControlWidget.h  BasicLandMuidMap.h  CMakeLists.txt  CachedImageLoader.cpp  CachedImageLoader.h  CapsuleIndicator.cpp  CapsuleIndicator.h  CardImageLoader.cpp  CardImageLoader.h  CardViewerWidget.cpp  CardViewerWidget.h  CardWidget.cpp  CardWidget.h  ChatEditWidget.cpp  ChatEditWidget.h  ClientProtoHelper.h  ClientSettings.cpp  ClientSettings.h  ClientToastOverlay.cpp  ClientToastOverlay.h  ClientUpdateChecker.cpp  ClientUpdateChecker.h  CommanderPane.cpp  CommanderPane.h  CommanderPaneSettings.h  ConnectDialog.cpp  ConnectDialog.h  CreateRoomDialog.cpp  CreateRoomDialog.h  CreateRoomWizard.cpp  CreateRoomWizard.h  DeckStatsLauncher.cpp  DeckStatsLauncher.h  (+64 more)
client/resources/: client.qrc  client_winicon.rc
client/tests/: testimagecache.cpp  testroomconfigadapter.cpp
common/: CommonProtoHelper.h  CommonTypes.h
core/: README.md
core/cards/: AllSetsData.h  BasicLand.h  BasicLandQuantities.h  CardData.h  CardDataTypes.h  CardPoolSelector.cpp  CardPoolSelector.h  Decklist.cpp  Decklist.h  MtgJson.h  MtgJsonAllSetsData.cpp  MtgJsonAllSetsData.h  MtgJsonCardData.cpp  MtgJsonCardData.h  PlayerInventory.cpp  PlayerInventory.h  SetDataTypes.h  SimpleCardData.h
core/cards/tests/: testcardpool.cpp  testdecklist.cpp  testmtgjson.cpp  testplayerinventory.cpp
core/draft/: Draft.h  Draft.tpp  DraftCardDispenser.h  DraftChairObserver.h  DraftConfig.proto  DraftConfigAdapter.cpp  DraftConfigAdapter.h  GridHelper.cpp  GridHelper.h
core/draft/tests/: TestDraftObserver.h  main.cpp  testdefaults.h  testdraftconfigadapter.cpp  testdraftinternals.cpp  testevents.cpp  testgrid.cpp  testgridhelper.cpp  testmisc.cpp  testpack.cpp  testround.cpp  teststate.cpp  testtick.cpp
core/logging/: Logging.h
core/net/: NetConnection.cpp  NetConnection.h  NetConnectionServer.cpp  NetConnectionServer.h
core/net/tests/: testnetconnection.cpp  testnetconnection.h
core/proto/: ProtoHelper.h  messages.proto
core/qt/: OverlayWidget.cpp  OverlayWidget.h  SizedSvgWidget.cpp  SizedSvgWidget.h  qtutils.cpp  qtutils.h  qtutils_core.h  qtutils_widget.cpp  qtutils_widget.h
core/test/: CMakeLists.txt
core/util/: RandGen.h  SimpleRandGen.cpp  SimpleRandGen.h  SimpleVersion.h  StringUtil.cpp  StringUtil.h  icompare.h
core/util/tests/: testicompare.cpp  testrandgen.cpp  testsimpleversion.cpp  teststringutil.cpp
ext/: README.md
server/: AdminShell.cpp  AdminShell.h  BoosterDispenser.cpp  BoosterDispenser.h  BotPlayer.h  CMakeLists.txt  CardDispenserFactory.cpp  CardDispenserFactory.h  ClientConnection.cpp  ClientConnection.h  ClientNotices.cpp  ClientNotices.h  ConnectionServer.cpp  ConnectionServer.h  CustomCardListDispenser.cpp  CustomCardListDispenser.h  DeckHashing.h  DraftTypes.h  HumanPlayer.cpp  HumanPlayer.h  Player.h  RoomConfigPrototype.cpp  RoomConfigPrototype.h  RoomConfigValidator.cpp  RoomConfigValidator.h  Server.cpp  Server.h  ServerRoom.cpp  ServerRoom.h  ServerSettings.cpp  ServerSettings.h  StupidBotPlayer.h  main.cpp  version.cpp.in  version.h
server/sims/: client.py  generate_proto.sh  txrx.py
server/tests/: main.cpp  testboosterdispenser.cpp  testcarddispenserfactory.cpp  testcustomcardlistdispenser.cpp  testdeckhashing.cpp  testroomconfigprototype.cpp  testroomconfigvalidator.cpp
web/: README.md  config_sample.js  package.json  thicket.js
